tests/toy/neg/001387_mutation.toylang
program a = { var a : bool if; } .
